release: v0.5.1 — second-audit fixes for the composition API
- full-table guard bypass: empty (all-skipped) condition specs attached via
  where(spec) counted as a condition; empty trees are now normalised during
  and/or composition and skipped at every attach point
- Conditions.col(...).eq(null) NPE -> renders IS NULL like the eager path
- reset() also clears the global converter registry
- enum fields ignore global converters (enum storage owns their conversion)
- 219 tests green; versions -> 0.5.1